@@ -1,33 +1,0 @@
-
-from wxPython.wx import *
-
-#----------------------------------------------------------------------
-
-class TestPanel(wxPanel):
-    def __init__(self, parent, log):
-        self.log = log
-        wxPanel.__init__(self, parent, -1)
-
-#----------------------------------------------------------------------
-
-def runTest(frame, nb, log):
-    win = TestPanel(nb, log)
-    return win
-
-#----------------------------------------------------------------------
-
-
-
-overview = """<html><body>
-<h2><center>Say something nice here</center></h2>
-
-</body></html>
-"""
-
-
-
-if __name__ == '__main__':
-    import sys,os
-    import run
-    run.main(['', os.path.basename(sys.argv[0])] + sys.argv[1:])
-
